Alterado index.html e criado pageC.html

--- a/pageC.html
+++ b/pageC.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Aula de desenvolvimento</title>
+    <title>Meu Site</title>
   </head>
   <body>
-    <h1>Github</h1>
+    <h2>Pagamento</h2>
   </body>
 </html>
